# ecossistem_apis

./: .gitignore  CQRS.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
api_feed/: .env.feed.example
api_feed/core/: api.py  celery.py  settings.py
api_feed/feed/: __init__.py  models.py  task.py
api_feed/feed/management/commands/: test_products.py
api_feed/feed/migrations/: 0001_initial.py
api_produtos/core/: api.py  celery.py  settings.py
api_produtos/produto/: apps.py  models.py  signals.py
api_produtos/produto/kiwi/: publisher.py
api_produtos/produto/management/commands/: celery_health_check.py  health_rabbit.py  insert_random_product.py  test_feed.py
api_produtos/produto/migrations/: 0001_initial.py
