[project]
name = "apis-ecossistem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.6",
    "django-extensions>=4.1",
    "django-ninja>=1.4.3",
    "ipython>=9.5.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "requests>=2.32.5",
    "ruff>=0.13.2",
    "typer>=0.19.2",
    "types-requests>=2.32.4.20250913",
    "django-tools",
    "redis>=6.4.0",
    "django-cqrs>=2.8.1",
]

[tool.uv.workspace]
members = []

[tool.uv.sources]
django-tools = { git = "https://github.com/edududs/django_tools.git" }
